fix(build): 잘못 덮어쓴 build.gradle.kts 복구 + jib 재적용